approved simons changes

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -14,7 +14,7 @@
 \usepackage[normalem]{ulem}
 
 \newcommand{\gc}[1]{{\em \color{green} #1}}
-\newcommand{\sa}[1]{{\color{rev1} #1}}
+\newcommand{\sa}[1]{{\color{black} #1}}
 \newcommand{\plr}[1]{{\em \color{green} (#1)}}
 \newcommand{\E}{\mathbb{E}}
 \renewcommand{\P}{\mathbb{P}}
