minor fix, adding t subscript

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -1790,7 +1790,7 @@ dominance coefficient. \sa{For selection to be directional, we require that $0 \
 
 We can then rewrite eqn.\ \eqref{deltap_dip2} as
 \begin{equation}
-\Delta p_t = \frac{p_tq_t (p_ths + qs(1-h))}{\wbar},
+\Delta p_t = \frac{p_tq_t (p_ths + q_t s(1-h))}{\wbar},
 \label{deltap_direct}
 \end{equation}
 where
